Tests/RunCMake/CMakePresets/HighVersion-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/HighVersion:
Error: @2,14: Unrecognized "version" field
  "version": 1000,
             \^$
